Fixed GitHub Actions workflow